--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
   <title>Blog Site</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,500|Oswald:300,400,500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
